# skrya

./: .gitignore  AGENTS.md  CONTRIBUTING.md  INSTALL.md  README.en.md  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml  setup  setup.ps1  skill-pack.json
agent-hosts/claude/: skrya-full-CLAUDE.md  skrya-lite-CLAUDE.md  skrya-plan-CLAUDE.md
agent-hosts/codex/: skrya-full-AGENTS.md  skrya-lite-AGENTS.md  skrya-plan-AGENTS.md
agents/: openai.yaml
deep-analysis/: SKILL.md  SKILL.md.tmpl  skill.json
design/: agent-native-intelligence-system-design.md  core-skills-spec.md  current-system-design.md  deep-analysis-spec.md  digest-feedback-journey.md  digest-spec.md  k-entertainment-deep-analysis-sample.md  k-entertainment-digest-sample.md  k-entertainment-topic-instance.md  thread-record-2026-04-12.md  topic-template-spec.md
digest/: SKILL.md  SKILL.md.tmpl  skill.json
digest/agents/: openai.yaml
docs/: byd-flash-charge-event-thread.example.json  byd-flash-charge-thread.example.json  domain-model.md  event-threads.md  external-retrieval-interface.md  threads.md  upgrade.md  user-journeys.md
prompt-templates/: skrya-full.md.tmpl  skrya-lite.md.tmpl  skrya-plan.md.tmpl  skrya-user.md.tmpl
request-curation/: SKILL.md  SKILL.md.tmpl  skill.json
scripts/: bootstrap-debian.sh  start-digest-session.ps1
skrya/: SKILL.md
source-curation/: SKILL.md  SKILL.md.tmpl  skill.json
tests/: test_agent_assets.py  test_ingest.py  test_intelligence.py  test_main_intelligence.py  test_paths.py  test_skill_contracts.py
topic-curation/: SKILL.md  SKILL.md.tmpl  skill.json
(+69 files in other folders)
