[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skrya-orchestrator"
version = "0.1.0"
description = "Topic-driven briefing workspace for digest and deep analysis flows"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

